# ocomone

./: .editorconfig  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml
ocomone/: pyproject.toml  setup.py  timer.py
ocomone-pypi/: pyproject.toml
ocomone-pypi/ocomone_pypi/: __main__.py  install.py
ocomone-selene/: pyproject.toml  requirements.txt  setup.py
ocomone-selene/ocomone_selene/: __init__.py  browser.py  bys.py  comators.py  elements.py  reporting.py  texts.py  widgets.py  wiring.py
ocomone-selene/tests/: conftest.py  test_comators.py
ocomone-selene/tests/test_comators/: test_comators.py
ocomone-selene/tests/test_wiring/: test.csv  test.yml  test_wiring.py
ocomone-wiring/: pyproject.toml
ocomone-wiring/ocomone_selene/: __init__.py  elements.py  wiring.py
ocomone/ocomone/: __init__.py  commons.py
