[tool.poetry]
name = "ocomone"
version = "0.4.2"
description = "Common helper library by Anton Kachurin"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/outcatcher/ocomone"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = {version = "^2.22",optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
