[tool.poetry]
name = "ocomone-pypi"
version = "0.1.0"
description = "Minimal pypi-server"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
pypiserver = "^1.2"
passlib = "^1.7"
bcrypt = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
