[tool.poetry]
name = "ocomone-selene"
version = "0.1.8.1"
description = "Library for locator wiring by Anton Kachurin"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "Apache-2.0"

[[tool.poetry.source]]
name = "my"
url = "http://ec2-34-245-34-71.eu-west-1.compute.amazonaws.com/simple/"

[[tool.poetry.source]]
name = "private"
url = "https://manhwa.caritc.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.6.2"

wrapt = "^1.11"
selene = "=1.0.0a13"
pytest = "^4.1"
allure-pytest = "^2.5"
ocomone = "^0.1.0"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
