[tool.poetry]
name = "ocomone-selene"
version = "0.1.0"
description = "Library for locator wiring by Anton Kachurin"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
wrapt = "^1.11"
selene = "=1.0.0a13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
