[tool.poetry]
name = "ocomone"
version = "0.1.1"
description = "Common helper library by Anton Kachurin"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
