[tool.poetry]
name = "ocomone"
version = "0.1.2"
description = "Common helper library by Anton Kachurin"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "Apache-2.0"

[[tool.poetry.source]]
name = "my"
url = "http://outcatcher.site/simple/"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
